add python to installed package

--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -34,7 +34,10 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     apt-get install -y --no-install-recommends build-essential; \
     gcc --version
 
-# Install docker (client + server)
+# Install docker (client + server), which used by
+# * job container & services: https://docs.github.com/en/actions/writing-workflows/workflow-syntax-for-github-actions#jobsjob_idcontainer
+# * Docker action: https://docs.github.com/en/actions/sharing-automations/creating-actions/creating-a-docker-container-action
+# Installation references:
 # * https://docs.docker.com/engine/install/ubuntu/
 # * https://get.docker.com
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
@@ -49,7 +52,19 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
       docker-ce containerd.io docker-ce-cli docker-compose-plugin docker-buildx-plugin; \
     docker -v
 
-# Install Node.js
+# Install Python, which used by:
+# * Python shell: https://docs.github.com/en/actions/writing-workflows/workflow-syntax-for-github-actions#jobsjob_iddefaultsrunshell
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt,sharing=locked \
+    set -eux; \
+    apt-get update; \
+    apt-get install -y --no-install-recommends python3; \
+    ln -s python3 /usr/bin/python; \
+    python --version
+
+# Install Node.js, which used by:
+# * JavaScript action: https://docs.github.com/en/actions/sharing-automations/creating-actions/creating-a-javascript-action
+# Installation references:
 # * https://nodejs.org/en/download/package-manager/all
 # * https://github.com/nodesource/distributions
 ARG NODE_VERSION="20.x"
